<resources>
    <string name="app_name">MobileDevelopment</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="email_error">incorrect email format</string>
    <string name="password_error">password should be at least 8 characters</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="check">Please input correct fields</string>
    <string name="phone_error">incorrect phone</string>
    <string name="name_error">incorrect name</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_up_explanation">This email is already registered</string>
    <string name="ok">OK</string>
    <string name="address">Address: %s</string>
    <string name="power">pw: %s</string>
    <string name="image">image</string>
    <string name="fetching_failed">Fetching from server failed</string>
    <string name="no_internet">No internet</string>
    <string name="server_error">Server error: %d</string>
    <string name="tab_2">Tab 2</string>
    <string name="power_description">Power: </string>
    <string name="battery_description">Battery Capacity: </string>
    <string name="address_description">Address: </string>
    <string name="uploading">Uploading</string>
    <string name="details">Details:</string>
    <string name="upload_fail">Upload failed</string>
    <string name="enter_password">Enter your password:</string>
    <string name="name_update_success">Name successfully updated</string>
    <string name="confirm">Confirm</string>
    <string name="email_update_success">User email successfully updated.</string>
    <string name="image_update_success">Image successfully updated</string>
    <string name="save">Save</string>
    <string name="new_panel">Create new panel</string>
    <string name="upload">Please, wait</string>
    <string name="panel_type_field">panel type</string>
    <string name="power_field">power</string>
    <string name="address_field">address</string>
    <string name="battery_capacity_field">battery capacity</string>
    <string name="post_failed">Can\'t post data to server</string>
    <string name="create_panel">Create Panel</string>
</resources>
