<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".CreatePanelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    tools:src="@tools:sample/backgrounds/scenic[5]" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/new_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/item_image"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="@color/confirmation_button"
                    android:src="@drawable/icon_change_photo" />
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/panel_type_field"
                android:inputType="text"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/power_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/power_field"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_field"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/battery_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/battery_capacity_field"
                app:errorEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_create_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/confirmation_button"
                android:padding="12dp"
                android:text="@string/create_panel" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible" />
</RelativeLayout>