<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.ProfileFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        tools:srcCompat="@tools:sample/avatars[5]" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/button_change_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/image_profile"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="@color/confirmation_button"
                        android:src="@drawable/icon_change_photo" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    android:text="@string/email"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/new_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_email"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/confirmation_button"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/new_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name"
                        android:importantForAutofill="no" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_save_name"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/confirmation_button"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>